# USADAE

./: LICENSE  README.md  pyproject.toml  train.py
models/: ae.py  discriminator.py
simulation/: plotpca.py  sim.py
simulation/data/: sim_1000_100_20_all_confounders.txt  sim_1000_100_20_all_gene_expression.txt  sim_1000_100_20_significant_genes.txt
simulation/result/: usadae_bio_latent.txt  usadae_conf_latent.txt  usadae_corrected_recon.txt  usadae_ori_recon.txt
utils/: data_loader.py  losses.py  preprocessing.py
