[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "USADAE"
version = "0.1.0"  # 初始版本，可通过 git tag 更新
authors = [{ name = "Chen Xu", email = "596821079@qq.com" }]
description = "Autoencoder-based tool for separating hidden confounding factors in RNA-seq data using adversarial learning"
readme = "README.md"
requires-python = ">=3.8"  # Python 3.8+，基于 torch 依赖
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.0.0",  # 核心深度学习库
    "numpy>=1.24.0",  # 数值计算
    "pandas>=2.0.0",  # 数据处理
    "scikit-learn>=1.3.0",  # PCA 和 KMeans
]

[project.scripts]
usadae-train = "train:main"  # 命令行入口，运行 train.py 的 main 函数

[tool.hatch.build.targets.wheel]
include = [
    "train.py",
    "models/*",
    "utils/*",
    "simulation/*"
]